<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView_ExtendedSearch_ID_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/textView_productname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text="Produktname"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_recommended_image"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/Text_ID_Beschreibung"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text="Beschreibung"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_recommended_image"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/Text_ID_ReleaseAdKategorie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text="Kategorie"
                    android:textColor="@android:color/black" />

                <Spinner
                    android:id="@+id/spinner_ID_ReleaseAdKategorie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/releaseAd_arrays"
                    android:prompt="@string/releaseAd_prompt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/Text_ID_Hauptbild"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text="Bild"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="2dp"
                    android:textAlignment="viewStart"/>

                <Button
                    android:id="@+id/button_ID_Bildauswaehlen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Bild auswählen" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/Text_ID_Preis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text="Preis in €"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/textView_ID_Preis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:height="50dp"
                    android:background="@android:color/background_light"
                    android:clickable="true"
                    android:contextClickable="true"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="text"
                    android:linksClickable="true"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:textAlignment="textStart"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/Text_ID_Einheit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text="Pro Einheit"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_recommended_image"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="25sp" />

                <CheckBox
                    android:id="@+id/checkBox_ID_ReleaseAd_BiologischerAnbau"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="Biologischer Anbau" />

                <EditText
                    android:id="@+id/Text_ID_ReleaseAd_ArtDerUebergabe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text="Art der Übergabe"
                    android:textColor="@android:color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/radioButton_ID_ReleaseAd_SelbstErnten"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Selbst ernten"
                                android:onClick="onRadioButtonClicked"/>
                            <RadioButton
                                android:id="@+id/radioButton_ID_ReleaseAd_BereitsGeerntet"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Bereits geerntet"
                                android:onClick="onRadioButtonClicked"/>

                            </RadioGroup>

                        </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_ID_ReleaseAdSpeichern"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Speichern" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>